# patrick

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  _formulas.tex  annotated.html  annotated_dup.js  build.sh  channel_8h.html  channel_8h_source.html  classes.html  classlivedemo_1_1binary__symm__channel-members.html  classlivedemo_1_1binary__symm__channel.html  classlivedemo_1_1binary__symm__channel.js  classlivedemo_1_1channel-members.html  classlivedemo_1_1channel.html  classlivedemo_1_1channel.js  classlivedemo_1_1channel__exception-members.html  classlivedemo_1_1channel__exception.html  classlivedemo_1_1channel__exception.js  classlivedemo_1_1command__line-members.html  classlivedemo_1_1command__line.html  classlivedemo_1_1command__line.js  classlivedemo_1_1command__line__exception-members.html  classlivedemo_1_1command__line__exception.html  classlivedemo_1_1command__line__exception.js  classlivedemo_1_1lossless__channel-members.html  classlivedemo_1_1lossless__channel.html  classlivedemo_1_1lossless__channel.js  classpatrick_1_1details_1_1word__exception-members.html  classpatrick_1_1details_1_1word__exception.html  classpatrick_1_1details_1_1word__exception.js  classpatrick_1_1linearcode-members.html  classpatrick_1_1linearcode.html  classpatrick_1_1linearcode.js  classpatrick_1_1linearcode__exception-members.html  classpatrick_1_1linearcode__exception.html  classpatrick_1_1linearcode__exception.js  command_8h.html  (+57 more)
.github/workflows/: ci.yml  clang-format-check.yml  docs.yml
cmake/: conan.cmake
docs/: Doxyfile  Doxygen  header.html
lib/: CMakeLists.txt
livedemo/: CMakeLists.txt  main.cpp
patrick/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  (+2 more)
tests/: CMakeLists.txt  test_core.cpp  test_it_works.cpp  test_word.cpp
(+13 files in other folders)
